telas-usuario-html-css-prontos-e-footer-add-em-todas-telas-funcionario

--- a/hotel/src/main/resources/static/cadastroFuncionario.html
+++ b/hotel/src/main/resources/static/cadastroFuncionario.html
@@ -84,5 +84,14 @@
                 </div>
             </div>
         </form>
+        <footer>
+            <div class="copyright">
+                <div class="col-lg-12 ">
+                    <div class="small text-white text-center">
+                        <span> &copy; 2022 - Projeto WEB - Jovem Programador SENAC</span>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
     </html>
