--- a/hotel/src/main/resources/static/cadastroUsuario.html
+++ b/hotel/src/main/resources/static/cadastroUsuario.html
@@ -134,6 +134,14 @@
                             <h1 class="negrito">CVV</h1>
                             <input type="text" class="cvv" name="cvv" placeholder="xxx">
                         </div>
+                        <div class="campoCadastro">
+                            <h1 class="negrito">Tipo Cartão</h1>
+                            <select name="selectCreditoOuDebito" class="pointer">
+                                <option value="" selected disabled hidden>Selecione Crédito ou Débito</option>
+                                <option value="cartaoCredito">Cartão de Crédito</option>
+                                <option value="cartaoDebito">Cartão de Débito</option>
+                            </select>
+                        </div>
                     </div>
                     <input type="submit" value="Salvar" class="negrito botaoSalvarCadastro pointer">
                 </div>
