--- a/hotel/src/main/resources/static/precoDiariaTipoQuarto.html
+++ b/hotel/src/main/resources/static/precoDiariaTipoQuarto.html
@@ -85,5 +85,14 @@
                 <input type="submit" value="Salvar" class="negrito botaoSalvarCadastro pointer">
             </div>
         </form>
+        <footer>
+            <div class="copyright">
+                <div class="col-lg-12 ">
+                    <div class="small text-white text-center">
+                        <span> &copy; 2022 - Projeto WEB - Jovem Programador SENAC</span>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
     </html>
