--- a/hotel/src/main/resources/static/reservaFuncionario.html
+++ b/hotel/src/main/resources/static/reservaFuncionario.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Hotel, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Floripa Hotel</title>
+    <title>Reserva Funcionário</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat+Alternates:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
@@ -31,33 +31,25 @@
     </div>
 
     <!-- Header Section Begin -->
-    <header class="header-section">
-        <div class="container-fluid">
-            <div class="inner-header">
-                <div class="logo">
-                    <a href="./index.html"><img src="img/logo.svg" alt=""></a>
-                </div>
-                <div class="nav-right">
-                    <a href="./index.html#reserva" class="primary-btn">Faça sua Reserva</a>
-                    <a href="./index.html#reserva" id="button-login">Login</a>
-                    <h6 class="text-white">Ainda não tem conta?<a href="./index.html#reserva" id="button-cadastro">Cadastre-se</a></h6>
-                </div>
-                <nav class="main-menu mobile-menu">
-                    <ul>
-                        <li><a href="./index.html">Início</a></li>
-                        <li><a href="rooms.html">Quartos</a></li>
-                        <li><a href="services.html">Serviços</a></li>
-                        <li><a href="./about-us.html">Sobre</a></li>
-                        <!-- <li><a href="./blog.html">Notícias</a></li> -->
-                        <li><a href="./contact.html">Contato</a></li>
-                    </ul>
-                </nav>
-                <div id="mobile-menu-wrap"></div>
-            </div>
+    <div class="cabecalho">
+        <div class="nomedoHotel">
+            <a href="">
+                <h1 class="negrito branco">Floripa</h1>
+                <h3 class="negrito branco">HOTEL</h3>
+            </a>
         </div>
-    </header>
+        <div class="logoHome">
+            <a href="#">
+                <img src="img/icons8-casa-64.png" alt="btn-home">
+            </a>
+        </div>
+        <div class="nomeSair">
+            <h3 class="negrito branco">João Pereira Silva</h3>
+            <button class="pointer" onclick="" >Logout</button>
+        </div>
+    </div>
     <!-- Header End -->
-
+    
     <!-- Hero Area Section Begin -->
     <section class="hero-area-reservation set-bg" data-setbg="img/hero-bg.jpg">
         <div class="container">
@@ -167,6 +159,19 @@
                                         <p>Piscina</p>
                                     </div>
                                 </div>
+                                <select id="quantidadeQuartos" name="selectQuantidadeQuartos" class="pointer">
+                                    <option value="" selected>Quantidade de Quartos</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                    <option value="7">7</option>
+                                    <option value="8">8</option>
+                                    <option value="9">9</option>
+                                    <option value="10">10</option>
+                                </select>
                                 <a href="#" class="primary-btn">Reservar Agora</a>
                             </div>
                         </div>
@@ -217,6 +222,19 @@
                                         <p>Piscina</p>
                                     </div>
                                 </div>
+                                <select id="quantidadeQuartos" name="selectQuantidadeQuartos" class="pointer">
+                                    <option value="" selected>Quantidade de Quartos</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                    <option value="7">7</option>
+                                    <option value="8">8</option>
+                                    <option value="9">9</option>
+                                    <option value="10">10</option>
+                                </select>
                                 <a href="#" class="primary-btn">Reservar Agora</a>
                             </div>
                         </div>
@@ -267,6 +285,19 @@
                                         <p>Piscina</p>
                                     </div>
                                 </div>
+                                <select id="quantidadeQuartos" name="selectQuantidadeQuartos" class="pointer">
+                                    <option value="" selected>Quantidade de Quartos</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                    <option value="7">7</option>
+                                    <option value="8">8</option>
+                                    <option value="9">9</option>
+                                    <option value="10">10</option>
+                                </select>
                                 <a href="#" class="primary-btn">Reservar Agora</a>
                             </div>
                         </div>
@@ -317,6 +348,19 @@
                                         <p>Piscina</p>
                                     </div>
                                 </div>
+                                <select id="quantidadeQuartos" name="selectQuantidadeQuartos" class="pointer">
+                                    <option value="" selected>Quantidade de Quartos</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                    <option value="7">7</option>
+                                    <option value="8">8</option>
+                                    <option value="9">9</option>
+                                    <option value="10">10</option>
+                                </select>
                                 <a href="#" class="primary-btn">Reservar Agora</a>
                             </div>
                         </div>
@@ -325,66 +369,16 @@
             <hr/>
         </div>
     </section>
-    <!-- Room Section End -->
-
-    <!-- Footer Section Begin -->
-    <footer class="footer-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4">
-                    <div class="footer-item">
-                        <div class="footer-logo">
-                            <a href="#"><img src="img/logo.svg" alt=""></a>
-                        </div>
-                        <p>Assine nosso Newsletter para receber emails com nossas principais novidades!</p>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="footer-item">
-                        <h5>Newsletter</h5>
-                        <div class="newslatter-form">
-                            <input type="text" placeholder="Insira Seu Email Aqui">
-                            <button type="submit">Assinar</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="footer-item">
-                        <h5>Informações de Contato</h5>
-                        <ul>
-                            <li><img src="img/placeholder.png" alt="">2285 João Paulo,<br />Florianópolis - SC</li>
-                            <li><img src="img/phone.png" alt="">+55 (48) 3535-4592</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <footer>
         <div class="copyright">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <ul>
-                            <li><a href="./index.html">Início</a></li>
-                            <li><a href="rooms.html">Quartos</a></li>
-                            <li><a href="services.html">Serviços</a></li>
-                            <li><a href="./about-us.html">Sobre</a></li>
-                            <!-- <li><a href="./blog.html">Notícias</a></li> -->
-                            <li><a href="./contact.html">Contato</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="row pt-5">
-                    <div class="col-lg-12 ">
-                        <div class="small text-white text-center">
-                            <span> &copy; 2022 - Projeto WEB - Jovem Programador SENAC</span>
-                        </div>
-                    </div>
+            <div class="col-lg-12 ">
+                <div class="small text-white text-center">
+                    <span> &copy; 2022 - Projeto WEB - Jovem Programador SENAC</span>
                 </div>
             </div>
         </div>
     </footer>
-    <!-- Footer Section End -->
-
+    <!-- Room Section End -->
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -395,5 +389,4 @@
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/main.js"></script>
 </body>
-
 </html>
