--- a/hotel/src/main/resources/static/loginUsuario.html
+++ b/hotel/src/main/resources/static/loginUsuario.html
@@ -56,7 +56,7 @@
             <input type="email" name="emailCliente" placeholder="exemplo@email.com">
             <h2>Sua Senha</h2>
             <input type="password" name="senhaCliente" placeholder="1º acesso =  preencha com a senha recebida em seu email">
-            <a href="teste">Esqueceu sua senha?</a>
+            <a href="recuperar">Esqueceu sua senha?</a>
             <input type="submit" value="Entrar" class="negrito botaoFinalizarCadastro">
         </form>
         <footer class="footer-section">
