--- a/hotel/src/main/resources/static/cadastroFuncionario.html
+++ b/hotel/src/main/resources/static/cadastroFuncionario.html
@@ -45,19 +45,19 @@
                 <div class="cadastroEsquerda">
                     <div class="campoCadastro">
                         <h1 class="negrito">Nome</h1>
-                        <input type="text" name="nomeFuncionario">
+                        <input type="text" name="nomeFuncionario" placeholder="Nome Completo">
                     </div>
                     <div class="campoCadastro">
                         <h1 class="negrito">Telefone</h1>
-                        <input type="text" name="nomeFuncionario">
+                        <input type="text" class="telefone" name="nomeFuncionario" placeholder="xx xxxxx-xxxx">
                     </div>
                     <div class="campoCadastro">
                         <h1 class="negrito">CPF</h1>
-                        <input type="text" name="nomeFuncionario">
+                        <input type="text" class="cpf" name="nomeFuncionario" placeholder="xxx.xxx.xxx-xx">
                     </div>
                     <div class="campoCadastro">
                         <h1 class="negrito">Endereço</h1>
-                        <input type="text" name="nomeFuncionario">
+                        <input type="text" name="nomeFuncionario" placeholder="Rua, nº, Cidade, Estado, País, CEP">
                     </div>
                 </div>
                 <div class="cadastroDireita">
@@ -66,8 +66,8 @@
                         <select name="selectCargo" class="pointer"></select>
                     </div>
                     <div class="campoCadastro">
-                        <h1 class="negrito">Login</h1>
-                        <input type="text" name="nomeFuncionario">
+                        <h1 class="negrito">Email</h1>
+                        <input type="email" name="nomeFuncionario" placeholder="Exemplo@email.com">
                     </div>
                     <div class="campoCadastro">
                         <h1 class="negrito">Senha</h1>
