--- a/hotel/src/main/resources/static/loginUsuario.html
+++ b/hotel/src/main/resources/static/loginUsuario.html
@@ -6,8 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <title>Login Usuário</title>
-        <script src="js/cliente.js"></script>
-
         <link href='https://fonts.googleapis.com/css?family=Montserrat Alternates' rel='stylesheet'>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
@@ -34,7 +32,7 @@
                     </div>
                     <div class="nav-right">
                         <a href="./index.html#reserva" class="primary-btn">Faça sua Reserva</a>
-                        <a href="./login.html" id="button-login">Login</a>
+                        <a href="./loginUsuario.html" id="button-login">Login</a>
                         <h6 class="text-white">Ainda não tem conta?<a href="./cadastroUsuario.html" id="button-cadastro">Cadastre-se</a></h6>
                     </div>
                     <nav class="main-menu mobile-menu">
