--- a/hotel/src/main/resources/static/cadastroFuncionario.html
+++ b/hotel/src/main/resources/static/cadastroFuncionario.html
@@ -35,7 +35,7 @@
             <hr/>
             <hr/>
             <div class="inputs">
-                <input class="barra-pesquisa" type="text" placeholder="Pesquisar por Funcionário">
+                <input class="barra-pesquisa" type="text" placeholder="Pesquisar Funcionário por CPF">
                 <input class="btnPesquisar negrito branco pointer" type="submit" value="Pesquisar">
             </div>
         </div>
