--- a/hotel/src/main/resources/static/tipoQuarto.html
+++ b/hotel/src/main/resources/static/tipoQuarto.html
@@ -10,7 +10,10 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/hotel.css">
         <script src="js/storageManager.js"> </script>
-        
+        <script src="js/tabela.js"></script>
+        <style>
+            th{text-align: center;font-family: Arial, Helvetica, sans-serif;font-size: 18px;};
+        </style>
     </head>
     <body>
         <div class="cabecalho">
@@ -31,43 +34,53 @@
             </div>
         </div>
         <div class="navegacao">
-            <h2 id="titulo" class="negrito">Funcionário</h2>
+            <h2 id="titulo" class="negrito">Tipo Quarto</h2>
             <hr/>
             <hr/>
             <hr/>
             <div class="inputs">
-                <input class="barra-pesquisa" type="text" placeholder="Pesquisar por Quarto">
+                <input class="barra-pesquisa" type="text" placeholder="Pesquisar por tipo de quarto">
                 <input class="btnPesquisar negrito branco pointer" type="submit" value="Pesquisar">
             </div>
         </div>
-        <form action="" method="POST">
-            <div class="cadastro">
-                <h1 class="negrito tituloCadastro">Cadastro de Quarto</h1>
-                <div class="cadastroEsquerda cadastroCentro">
-                    <div class="campoCadastro">
-                        <h1 class="negrito">Nº do Quarto</h1>
-                        <input type="text" name="nomeFuncionario">
-                        <input type="button" value="desativar" class="negrito botaoExcluirCadastro pointer">
-                        <input type="submit" value="Salvar" class="negrito botaoSalvarCadastro pointer">
-                    </div>
-                    <div class="campoCadastro">
-                        <h1 class="negrito">Tipo de quarto</h1>
-                        <select name="selectCargo" class="pointer"></select>
-                    </div>
-                    <div class="campoCadastro">
-                        <h1 class="negrito">Quantidade de camas</h1>
-                        <input type="text" name="nomeFuncionario">
-                    </div>
-                    <div class="campoCadastro">
-                        <h1 class="negrito">Nº de pessoas por quarto</h1>
-                        <input type="text" name="nomeFuncionario">
-                    </div>
-                </div>
-                <!--<input type="reset" value="Excluir" class="negrito botaoExcluirCadastro pointer">-->
-                <!--<input type="submit" value="Cadastrar" class="negrito botaoCadastrarCadastro pointer">-->
-                <!--<input type="submit" value="Salvar" class="negrito botaoSalvarCadastro pointer">-->
-            </div>
-        </form>
+        <div style="margin-top: 50px;">
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th>Tipo de quarto</th>
+                        <th>Cama Solteiro</th>
+                        <th>Cama Casal</th>
+                        <th>N° Pessoas</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody id="listerUser">
+                    <form action="">
+                        <tr>
+                            <td><input type="text" class="centralText" required></td>
+                            <td><input type="number" required></td>
+                            <td><input type="number" required></td>
+                            <td><input type="number" required></td>
+                            <td>
+                                <button type="submit" class="confirmar">Confirmar</button>
+                            </td>
+                        </tr>
+                    </form>
+                        <tr>
+                            <td>master</td>
+                            <td>2</td>
+                            <td>1</td>
+                            <td>3</td>
+                            <td>
+                              <img src="img/excluir_lixeira_30x30px.svg" class="botaoPopup" onclick="mostrarPopup()">
+                              <img src="img/editar_lapis_30x30px.svg" class="botaoPopup">  
+                            </td>
+                        </tr>
+                    </form>
+                </tbody>
+            </table>
+        </div>
+        <!---->
         <footer>
             <div class="copyright">
                 <div class="col-lg-12 ">
@@ -76,6 +89,10 @@
                     </div>
                 </div>
             </div>
+            <div class="popup">
+                <button onclick="ocultarPopup()"class="close">teste</button>
+            </div>
         </footer>
     </body>
+    <script></script>
     </html>
