houve troca na função logout para haver uma possivel utilidade global no sistema

--- a/hotel/src/main/resources/static/tipoQuarto.html
+++ b/hotel/src/main/resources/static/tipoQuarto.html
@@ -30,7 +30,7 @@
             </div>
             <div class="nomeSair">
                 <h3 class="negrito branco">João Pereira Silva</h3>
-                <button class="pointer" onclick="Logout()" >Logout</button>
+                <button class="pointer" onclick="Logout()" id="logout" >Logout</button>
             </div>
         </div>
         <div class="navegacao">
