mostrar no senac, para melhor entendimento

--- a/hotel/src/main/resources/static/cadastroQuarto.html
+++ b/hotel/src/main/resources/static/cadastroQuarto.html
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="navegacao">
-            <h2 id="titulo" class="negrito">Funcionário</h2>
+            <h2 id="titulo" class="negrito">Quarto</h2>
             <hr/>
             <hr/>
             <hr/>
@@ -46,20 +46,10 @@
                     <div class="campoCadastro">
                         <h1 class="negrito">Nº do Quarto</h1>
                         <input type="text" name="nomeFuncionario">
-                        <input type="button" value="desativar" class="negrito botaoExcluirCadastro pointer">
-                        <input type="submit" value="Salvar" class="negrito botaoSalvarCadastro pointer">
                     </div>
                     <div class="campoCadastro">
                         <h1 class="negrito">Tipo de quarto</h1>
                         <select name="selectCargo" class="pointer"></select>
-                    </div>
-                    <div class="campoCadastro">
-                        <h1 class="negrito">Quantidade de camas</h1>
-                        <input type="text" name="nomeFuncionario">
-                    </div>
-                    <div class="campoCadastro">
-                        <h1 class="negrito">Nº de pessoas por quarto</h1>
-                        <input type="text" name="nomeFuncionario">
                     </div>
                 </div>
                 <!--<input type="reset" value="Excluir" class="negrito botaoExcluirCadastro pointer">-->
