--- a/hotel/src/main/resources/static/cadastroQuarto.html
+++ b/hotel/src/main/resources/static/cadastroQuarto.html
@@ -52,9 +52,7 @@
                         <select name="selectCargo" class="pointer"></select>
                     </div>
                 </div>
-                <!--<input type="reset" value="Excluir" class="negrito botaoExcluirCadastro pointer">-->
-                <!--<input type="submit" value="Cadastrar" class="negrito botaoCadastrarCadastro pointer">-->
-                <!--<input type="submit" value="Salvar" class="negrito botaoSalvarCadastro pointer">-->
+                <input type="submit" value="Salvar" class="negrito botaoSalvarCadastro pointer">
             </div>
         </form>
         <footer>
