--- a/hotel/src/main/resources/static/cadastroCargo.html
+++ b/hotel/src/main/resources/static/cadastroCargo.html
@@ -44,7 +44,9 @@
                     <h1 class="nomeNovoCargoPermissao">Permissão</h1>
                     <select name="nomePermissao" class="pointer"></select>
                 </div>
-                <input type="submit" value="Salvar" class="negrito botaoSalvarCadastro pointer">
+                <div class="botoesCadastro">
+                    <input type="submit" value="Salvar" class="negrito botaoSalvarCadastro pointer">
+                </div>
             </div>
         </form>
         <footer>
