--- a/hotel/src/main/resources/static/pagamentoFuncionario.html
+++ b/hotel/src/main/resources/static/pagamentoFuncionario.html
@@ -93,7 +93,7 @@
             </div>
             <h3 class="negrito">Pagamento
                 <select name="selectBandeirasCartoes" class="pointer">
-                    <option value="" selected disabled hidden>Selecione o Método de Pagamento</option>
+                    <option value="" selected disabled>Selecione o Método de Pagamento</option>
                     <option value="dinheiro">Dinheiro</option>
                     <option value="cartaoCredito">Cartão de Crédito</option>
                     <option value="cartaoDebito">Cartão de Débito</option>
