--- a/hotel/src/main/resources/static/pagamentoUsuario.html
+++ b/hotel/src/main/resources/static/pagamentoUsuario.html
@@ -122,7 +122,7 @@
                             <div class="campoCadastro">
                                 <h1 class="negrito">Bandeira</h1>
                                 <select id="bandeirasCartoes" name="selectBandeirasCartoes" class="pointer">
-                                    <option value="" selected disabled hidden>Selecione a Bandeira do Cartão</option>
+                                    <option value="" selected disabled>Selecione a Bandeira do Cartão</option>
                                     <option value="americanExpress">American Express</option>
                                     <option value="dinersClubInternational">Diners Club International</option>
                                     <option value="elo">Elo</option>
@@ -152,7 +152,7 @@
                             <div class="campoCadastro">
                                 <h1 class="negrito">Tipo Cartão</h1>
                                 <select name="selectCreditoOuDebito" class="pointer">
-                                    <option value="" selected disabled hidden>Selecione Crédito ou Débito</option>
+                                    <option value="" selected disabled>Selecione Crédito ou Débito</option>
                                     <option value="cartaoCredito">Cartão de Crédito</option>
                                     <option value="cartaoDebito">Cartão de Débito</option>
                                 </select>
