--- a/hotel/src/main/resources/static/reservaFuncionario.html
+++ b/hotel/src/main/resources/static/reservaFuncionario.html
@@ -160,7 +160,7 @@
                                     </div>
                                 </div>
                                 <select id="quantidadeQuartos" name="selectQuantidadeQuartos" class="pointer">
-                                    <option value="" selected>Quantidade de Quartos</option>
+                                    <option value="" selected disabled>Quantidade de Quartos</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
                                     <option value="3">3</option>
@@ -223,7 +223,7 @@
                                     </div>
                                 </div>
                                 <select id="quantidadeQuartos" name="selectQuantidadeQuartos" class="pointer">
-                                    <option value="" selected>Quantidade de Quartos</option>
+                                    <option value="" selected disabled>Quantidade de Quartos</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
                                     <option value="3">3</option>
@@ -286,7 +286,7 @@
                                     </div>
                                 </div>
                                 <select id="quantidadeQuartos" name="selectQuantidadeQuartos" class="pointer">
-                                    <option value="" selected>Quantidade de Quartos</option>
+                                    <option value="" selected disabled>Quantidade de Quartos</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
                                     <option value="3">3</option>
@@ -349,7 +349,7 @@
                                     </div>
                                 </div>
                                 <select id="quantidadeQuartos" name="selectQuantidadeQuartos" class="pointer">
-                                    <option value="" selected>Quantidade de Quartos</option>
+                                    <option value="" selected disabled>Quantidade de Quartos</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
                                     <option value="3">3</option>
