--- a/hotel/src/main/resources/static/reservaUsuario.html
+++ b/hotel/src/main/resources/static/reservaUsuario.html
@@ -168,7 +168,7 @@
                                     </div>
                                 </div>
                                 <select id="quantidadeQuartos" name="selectQuantidadeQuartos" class="pointer">
-                                    <option value="" selected>Quantidade de Quartos</option>
+                                    <option value="" selected disabled>Quantidade de Quartos</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
                                     <option value="3">3</option>
@@ -231,7 +231,7 @@
                                     </div>
                                 </div>
                                 <select id="quantidadeQuartos" name="selectQuantidadeQuartos" class="pointer">
-                                    <option value="" selected>Quantidade de Quartos</option>
+                                    <option value="" selected disabled>Quantidade de Quartos</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
                                     <option value="3">3</option>
@@ -294,7 +294,7 @@
                                     </div>
                                 </div>
                                 <select id="quantidadeQuartos" name="selectQuantidadeQuartos" class="pointer">
-                                    <option value="" selected>Quantidade de Quartos</option>
+                                    <option value="" selected disabled>Quantidade de Quartos</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
                                     <option value="3">3</option>
@@ -357,7 +357,7 @@
                                     </div>
                                 </div>
                                 <select id="quantidadeQuartos" name="selectQuantidadeQuartos" class="pointer">
-                                    <option value="" selected>Quantidade de Quartos</option>
+                                    <option value="" selected disabled>Quantidade de Quartos</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
                                     <option value="3">3</option>
