--- a/hotel/src/main/resources/static/tipoQuarto.html
+++ b/hotel/src/main/resources/static/tipoQuarto.html
@@ -107,7 +107,7 @@
             </table>
         </div>
         <!---->
-        <footer>
+        <footer class="footerTabela">
             <div class="copyright">
                 <div class="col-lg-12 ">
                     <div class="small text-white text-center">
