inserindo entidade cargo no banco

--- a/hotel/src/main/resources/static/cadastroCargo.html
+++ b/hotel/src/main/resources/static/cadastroCargo.html
@@ -33,16 +33,16 @@
             <h2 id="titulo" class="negrito">Tipo de cargo</h2>
             <hr class="hrLaranja"/>
         </div>
-        <form action="" style="margin-bottom: 50px;">
+        <form action="/cadastrarCargo" method="POST" style="margin-bottom: 50px;">
             <div class="cadastro cadastroCentro">
                 <h1 class="negrito tituloCadastro">Cadastro de Tipos de Cargos</h1>
                 <div class="campoCadastro centralizarDiv">
                     <h1 class="negrito">Cargo</h1>
-                    <input type="text" name="nomeCargo">
+                    <input type="text" name="tipoCargo">
                 </div>
                 <div class="campoCadastro centralizarDiv">
                     <h1 class="negrito">Permissão</h1>
-                    <select name="nomePermissao" class="pointer">
+                    <select name="permissao" class="pointer">
                         <option selected disabled>Selecione o Tipo de Permissão</option>
                         <option value="admin">Admin</option>
                         <option value="comum">Comum</option>
