popup de editar pronto!!

--- a/hotel/src/main/resources/static/tipoQuarto.html
+++ b/hotel/src/main/resources/static/tipoQuarto.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Cadastro de Quarto</title>
         <link href='https://fonts.googleapis.com/css?family=Montserrat Alternates' rel='stylesheet'>
+        <script src="js/jquery-3.3.1.min.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/hotel.css">
@@ -120,13 +121,38 @@
             <form action="">
                 <div class="editarPopup">
                         <div class="headerPopup">
-                            <h1 class="tituloPopup">Editar tipo de quarto</h1> <img src="img/close_1.png" class="pointer close" onclick="ocultarPopup()" alt="">
+                            <h1 class="tituloPopup">editar</h1> 
                         </div>
-                        <div>
-                            <label>Tipo de quarto</label>
-                            <input type="text" placeholder="digite tipo de quarto" name="tipoQuarto" class="input-popupForm">
-                        </div>
-                </div>
+                        <div class="inputPopup">
+                            <label class="title-input">Tipo de quarto</label>
+                            <input type="text" class="form-control inputpopupForm" name="tipoQuarto" required>
+                        </div> 
+                        <div class="inputPopup">
+                            <label class="title-input">Cama Solteiro</label>
+                            <select class="form-select form-select-lg inputpopupForm" aria-label=".form-select-lg example" id="quantidadeCamaSolteiro" name="quantidadeCamaSolteiro" onchange="gerarQNTpessoas()" required>
+                                <option value="1" selected>1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                              </select>
+                        </div> 
+                        <div class="inputPopup">
+                            <label class="title-input">Cama Casal</label>
+                            <select class="form-select form-select-lg inputpopupForm" aria-label=".form-select-lg example" id="quantidadeCamaCasal" name="quantidadeCamaCasal" onchange="gerarQNTpessoas()" required>
+                                <option value="1" selected>1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                              </select>
+                        </div> 
+                        <div class="inputPopup">
+                            <label class="title-input">N° Pessoas</label>
+                            <input type="text" class="form-control inputpopupForm" disabled required name="numeroPessoas" id="numeroPessoas">
+                        </div> 
+                        <footer class="footerPopup">
+                            <button type="button" class="buttonPopup buttonCancel close" onclick="ocultarPopup()">Cancelar </button>
+                            <button type="submit" class="buttonPopup buttonSuccess">Salvar</button>
+                        </footer>
              </form>
         </div>
     </body>
