placeHolders e names arrumados(cadastrosCargo/Qaurto)

--- a/hotel/src/main/resources/static/cadastroCargo.html
+++ b/hotel/src/main/resources/static/cadastroCargo.html
@@ -38,7 +38,7 @@
                 <h1 class="negrito tituloCadastro">Cadastro de Tipos de Cargos</h1>
                 <div class="campoCadastro centralizarDiv">
                     <h1 class="negrito">Cargo</h1>
-                    <input type="text" name="tipoCargo">
+                    <input type="text" name="tipoCargo" placeholder="Insira o Nome do Cargo">
                 </div>
                 <div class="campoCadastro centralizarDiv">
                     <h1 class="negrito">Permissão</h1>
