--- a/hotel/src/main/resources/static/cadastroQuarto.html
+++ b/hotel/src/main/resources/static/cadastroQuarto.html
@@ -42,7 +42,7 @@
                 <h1 class="negrito tituloCadastro">Cadastro de Quarto</h1>
                     <div class="campoCadastro centralizarDiv">
                         <h1 class="negrito">Nº do Quarto</h1>
-                        <input type="text" name="nomeFuncionario">
+                        <input type="text" name="numero" placeholder="Insira o Número do Quarto">
                     </div>
                     <div class="campoCadastro centralizarDiv">
                         <h1 class="negrito">Tipo de quarto</h1>
@@ -57,11 +57,11 @@
                     <div id="radioCargo">
                         <div>
                             <h3 class="negrito">Ativar</h1>
-                            <input type="radio" name="radio" value="ativado">
+                            <input type="radio" name="status" value="True">
                         </div>
                         <div>
                             <h3 class="negrito">Desativar</h1>
-                            <input type="radio" name="radio" value="desativado">
+                            <input type="radio" name="status" value="False">
                         </div>
                     </div>
                     <div class="botoesCadastro">
